# cpp

codex-test-code/: README.md  index.html  script.js  styles.css
crash_test/: Makefile  analyze_crash.py  crash_demo  crash_demo.c  example_input.txt
db_demo/: .gitignore  CHANGELOG.md  CMakeLists.txt  PROJECT_STRUCTURE.txt  README.md  directory_tree.txt
db_demo/app/: CMakeLists.txt  main.cpp
db_demo/cmake/: README.md  db_utilConfig.cmake.in
db_demo/core/: CMakeLists.txt
db_demo/core/include/: DatabaseService.h
db_demo/core/include/dao/: OrderDAO.h  ProductDAO.h  UserDAO.h
db_demo/core/include/entities/: Order.h  Product.h  User.h
db_demo/core/src/: DatabaseService.cpp
db_demo/core/src/dao/: OrderDAO.cpp  ProductDAO.cpp  UserDAO.cpp
db_demo/core/src/entities/: Order.cpp  Product.cpp  User.cpp
db_demo/db_util/: CMakeLists.txt
db_demo/db_util/examples/: easy_usage_example.cpp  simple_db_example.cpp  simple_table_example.cpp
db_demo/db_util/include/: DatabaseManager.h  TableManager.h
db_demo/db_util/src/: DatabaseManager.cpp  TableManager.cpp
db_demo/db_util/tests/: debug_test.cpp
db_demo/docs/: ARCHITECTURE_DIAGRAM.txt  BUILD_AND_RUN.md  DIRECTORY_STRUCTURE.md  LAYERED_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TEAM_USAGE_GUIDE.md
db_demo/modules/order_module/: CMakeLists.txt
db_demo/modules/order_module/include/: OrderModule.h
db_demo/modules/order_module/src/: OrderModule.cpp
db_demo/modules/user_module/: CMakeLists.txt
db_demo/modules/user_module/include/: UserModule.h
db_demo/modules/user_module/src/: UserModule.cpp
dds_demo/: .gitignore  ARCHITECTURE_IMPROVEMENT.md  BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  PRODUCTION_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md
dds_demo/config/: default_config.json
dds_demo/docs/: ADD_NEW_TYPE.md  API_REFERENCE.md  CONFIGURATION.md  IDL_GUIDE.md  QUICK_START.md  TROUBLESHOOTING.md
dds_demo/examples/: CMakeLists.txt  add_new_type_tutorial.cpp  basic_pubsub.cpp  custom_qos.cpp  multiple_topics.cpp  reliable_communication.cpp  service_demo.cpp
dds_demo/idl/: AddTwoInts.idl  CMakeLists.txt  CommandMessage.idl  CommonMessage.idl  SensorData.idl
dds_demo/include/dds_wrapper/: Config.h  DDSManager.h  Exception.h  Logger.h  Publisher.h  ServiceClient.h  ServiceServer.h  Subscriber.h  Types.h
dds_demo/src/: CMakeLists.txt  ConfigManager.cpp  DDSManager.cpp  Logger.cpp
dds_demo/tools/: CMakeLists.txt  create_idl.py  list_types.cpp  validate_idl.sh
git_tools/: cross_compile_5200.sh  cross_compile_arm8155.sh  git_helpers.sh  git_multi.sh  load_aliases.sh
io/: .gitignore  CMakeLists.txt  README.md  USAGE_CN.md  build.sh  clean.sh
io/examples/: main.cpp
io/include/: CanTransport.h  ITransport.h  SerialTransport.h  SharedMemoryTransport.h  SocketTransport.h  TransportBase.h  TransportFactory.h
io/src/: CanTransport.cpp  SerialTransport.cpp  SharedMemoryTransport.cpp  SocketTransport.cpp  TransportBase.cpp  TransportFactory.cpp
mvc/: CMakeLists.txt  README.md  api_server.cpp  config.json  design.txt  main.cpp  setup_database.sql  setup_extended_database.sql
mvc/examples/: CMakeLists.txt  README.md  business_application.cpp  complete_architecture_example.cpp  multi_entity_example.cpp  simple_usage.cpp  web_api_example.cpp
mvc/include/api/: http_server.h  rest_api_controller.h
mvc/include/cache/: cache_manager.h  cache_service.h
mvc/include/controllers/: order_controller.h  product_controller.h  user_controller.h
mvc/include/database/: database_config.h  database_connection.h  database_connection_pool.h
mvc/include/models/: order.h  product.h  user.h
mvc/include/repositories/: order_repository.h  product_repository.h  user_repository.h
mvc/include/services/: application_service.h  order_service.h  product_service.h  user_service.h
mvc/include/utils/: config_manager.h  logger.h
mvc/src/api/: http_server.cpp  rest_api_controller.cpp
mvc/src/cache/: cache_manager.cpp  cache_service.cpp
mvc/src/controllers/: order_controller.cpp  product_controller.cpp  user_controller.cpp
mvc/src/database/: database_config.cpp  database_connection.cpp  database_connection_pool.cpp
mvc/src/models/: order.cpp  product.cpp  user.cpp
mvc/src/repositories/: order_repository.cpp  product_repository.cpp  user_repository.cpp
mvc/src/services/: application_service.cpp  order_service.cpp  product_service.cpp  user_service.cpp
mvc/src/utils/: config_manager.cpp  logger.cpp
mvc/tests/: test_cache_manager.cpp  test_database_config.cpp  test_main.cpp  test_user_service.cpp
restful_api/: CMakeLists.txt  README.md  api_protocol.h  async_client.cpp  client.cpp  main.cpp  server.cpp
socket_wrapper/: CMakeLists.txt  README.md
socket_wrapper/examples/: protocol_example.cpp  simple_protocol.cpp  simple_protocol.h  tcp_client_server.cpp  udp_client_server.cpp
socket_wrapper/include/network_lib/: protocol.h  tcp_socket.h  udp_socket.h
socket_wrapper/src/: tcp_socket.cpp  udp_socket.cpp
tcp_net/: CMakeLists.txt  README.md  build.sh  clean.sh
tcp_net/cmake/: tcp_network_libConfig.cmake.in
tcp_net/examples/: CMakeLists.txt  simple_tcp_example.cc
tcp_net/include/tcp_network/: heartbeat_strategy.h  message_boundary_detector.h  tcp_communicator.h  tcp_communicator_config.h  tcp_communicator_interface.h
tcp_net/src/: CMakeLists.txt  heartbeat_strategy.cc  message_boundary_detector.cc  tcp_communicator.cc  tcp_communicator_config.cc
ut/link_wrap/: CMakeLists.txt  README.md  main.c  original_lib.c  wrapper.c
ut/mock_test/: CMakeLists.txt  README.md
ut/mock_test/mock_lib/: uos_rmap_mock.h
ut/mock_test/ut/: uos_rmap_mock_test.cc
