# Find fastddsgen
find_program(FASTDDSGEN fastddsgen)
if(NOT FASTDDSGEN)
    message(WARNING "fastddsgen not found. IDL files will not be compiled automatically.")
    message(WARNING "Please install FastDDS-Gen from: https://github.com/eProsima/Fast-DDS-Gen")
endif()

# Collect all IDL files
file(GLOB IDL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.idl")

set(IDL_GENERATED_SOURCES)
set(IDL_GENERATED_HEADERS)

# Generate C++ code for each IDL file
foreach(IDL_FILE ${IDL_FILES})
    get_filename_component(IDL_NAME ${IDL_FILE} NAME_WE)
    
    set(GENERATED_FILES
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}.hpp
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}PubSubTypes.cxx
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}PubSubTypes.hpp
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}TypeObjectSupport.cxx
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}TypeObjectSupport.hpp
    )
    
    if(FASTDDSGEN)
        add_custom_command(
            OUTPUT ${GENERATED_FILES}
            COMMAND ${FASTDDSGEN} -replace -d ${CMAKE_CURRENT_BINARY_DIR} ${IDL_FILE}
            DEPENDS ${IDL_FILE}
            COMMENT "Generating C++ code for ${IDL_NAME}.idl"
        )
    endif()
    
    list(APPEND IDL_GENERATED_SOURCES
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}PubSubTypes.cxx
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}TypeObjectSupport.cxx
    )
    
    list(APPEND IDL_GENERATED_HEADERS
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}.hpp
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}PubSubTypes.hpp
        ${CMAKE_CURRENT_BINARY_DIR}/${IDL_NAME}TypeObjectSupport.hpp
    )
    
    # Collect type names for IDLTypes.h generation
    list(APPEND IDL_TYPE_NAMES ${IDL_NAME})
endforeach()

# Generate IDLTypes.h header file
set(IDL_TYPES_HEADER ${CMAKE_CURRENT_BINARY_DIR}/IDLTypes.h)
set(IDL_TYPES_CONTENT "// Auto-generated file - DO NOT EDIT\n")
string(APPEND IDL_TYPES_CONTENT "// This file is automatically generated by CMake from all .idl files in idl/\n")
string(APPEND IDL_TYPES_CONTENT "// To add a new type:\n")
string(APPEND IDL_TYPES_CONTENT "//   1. Create YourType.idl in idl/ directory\n")
string(APPEND IDL_TYPES_CONTENT "//   2. Run cmake to regenerate this file\n")
string(APPEND IDL_TYPES_CONTENT "//   3. Include \"IDLTypes.h\" in your code and use YourType directly\n\n")
string(APPEND IDL_TYPES_CONTENT "#ifndef DDS_WRAPPER_IDL_TYPES_H\n")
string(APPEND IDL_TYPES_CONTENT "#define DDS_WRAPPER_IDL_TYPES_H\n\n")
string(APPEND IDL_TYPES_CONTENT "// Include all generated IDL type headers\n")

foreach(TYPE_NAME ${IDL_TYPE_NAMES})
    string(APPEND IDL_TYPES_CONTENT "#include \"${TYPE_NAME}.hpp\"\n")
    string(APPEND IDL_TYPES_CONTENT "#include \"${TYPE_NAME}PubSubTypes.hpp\"\n")
endforeach()

string(APPEND IDL_TYPES_CONTENT "\n// Include Types.h to get the registration macro\n")
string(APPEND IDL_TYPES_CONTENT "#include \"dds_wrapper/Types.h\"\n\n")
string(APPEND IDL_TYPES_CONTENT "// Register all IDL types with the wrapper\n")

foreach(TYPE_NAME ${IDL_TYPE_NAMES})
    string(APPEND IDL_TYPES_CONTENT "DDS_REGISTER_TYPE(${TYPE_NAME}, ${TYPE_NAME}PubSubType)\n")
endforeach()

string(APPEND IDL_TYPES_CONTENT "\n#endif // DDS_WRAPPER_IDL_TYPES_H\n")

file(WRITE ${IDL_TYPES_HEADER} "${IDL_TYPES_CONTENT}")

# Add IDLTypes.h to generated headers
list(APPEND IDL_GENERATED_HEADERS ${IDL_TYPES_HEADER})

# Create library with generated code
if(IDL_GENERATED_SOURCES)
    add_library(idl_types STATIC ${IDL_GENERATED_SOURCES})
    
    target_link_libraries(idl_types
        fastdds
        fastcdr
    )
    
    target_include_directories(idl_types PUBLIC
        ${CMAKE_CURRENT_BINARY_DIR}
    )
else()
    # Create empty library if no IDL files or fastddsgen not found
    add_library(idl_types INTERFACE)
endif()
